# argspec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yaml
argspec/: __init__.py  argspec.py  metadata.py  parse.py  readenv.py  schema.py
tests/: test_argspec.py  test_converter.py  test_default_factory.py  test_direct_instantiation.py  test_frozen.py  test_frozen_slots.py  test_help_messages.py  test_key_equals_value.py  test_mutable_defaults.py  test_readenv.py  test_replace.py  test_track_skip_validation.py
